refactor(core): 优化进程操作器命令行处理
- 添加命令行长度限制检查，支持跨平台安全阈值
- 实现 Java 9+ @argfile 特性用于长命令行参数
- 过滤 IDE 相关的 JVM 参数避免子进程启动错误
- 替换 GC 日志文件名避免父子进程冲突
- 过滤 classpath 中 IDE 无效路径提升兼容性
- 升级 Spring Boot 版本从 3.4.0 到 3.5.15
- 更新应用名称配置从 demo2_local 到 demo2